tests/syntax_errors/test70_2.tl
require "ifj21"
aaa
